# KBudddy-MockAPI

./: .env.test  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  pr-check.yml
backend/: .env.test  .gitignore  Dockerfile  README.md  pyproject.toml  setup.py
backend/.github/workflows/: ci.yml  pr-check.yml
backend/script/: run-server.sh
backend/src/: __init__.py
backend/src/core/: settings.py
backend/src/crud/: _base.py
backend/src/helper/: exceptions.py
backend/src/router/: __init__.py  user.py
backend/src/schemas/: qna.py  user.py
backend/src/utils/: documents.py
backend/test/: conftest.py
frontend/: README.md
script/: run-server.sh
src/: __init__.py
src/crud/: _base.py  qna.py  user.py
src/helper/: exceptions.py  global_data.py  pagination.py
src/mocks/: __init__.py  mock_comments.json  mock_likes.json  mock_qnas.json  mock_users.json
src/router/: __init__.py  _check.py  qna.py  user.py
src/schemas/: __init__.py  qna.py  user.py
src/utils/: documents.py
test/: conftest.py
test/routes/: test_qna.py  test_user.py
