[tool.poetry]
name = "kbuddy-mockserver"
version = "0.1.0"
description = "KBuddy Mocking Data API server"
authors = ["bnbong <bbbong9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvicorn = "^0.30.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
setuptools-scm = "^8.1.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.8"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
